[gd_scene load_steps=19 format=2]

[ext_resource path="res://Tower/lab.png" type="Texture" id=1]
[ext_resource path="res://LightShadow_pipo.png" type="Texture" id=2]
[ext_resource path="res://Tower/FireLab.gd" type="Script" id=3]
[ext_resource path="res://UI/HP_Bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tower/burning_start_1.png" type="Texture" id=5]
[ext_resource path="res://Tower/burning_loop_3.png" type="Texture" id=6]
[ext_resource path="res://Tower/burning_loop_1.png" type="Texture" id=7]
[ext_resource path="res://Tower/burning_end_3.png" type="Texture" id=8]
[ext_resource path="res://Tower/burning_end_1.png" type="Texture" id=9]
[ext_resource path="res://Tower/burning_start_3.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "LightShadow_pipo.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 64, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "LightShadow_pipo.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 89.3104, 25.5703 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 126.145, 8.83154 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.3308, 23.1078 )

[sub_resource type="Animation" id=5]
resource_name = "aman"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lab:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/end:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "bakar"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("lab:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/start:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/end:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "siram"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("lab:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/end:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/start:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "terbakar"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("lab:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire/loop/burning_loop_1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire/loop/burning_loop_3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("fire/loop/burning_loop_2:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("fire/loop/burning_loop_4:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("fire/loop/burning_loop_5:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("fire/loop/burning_loop_6:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("fire/start:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("fire/loop:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("fire/end:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="FireLab" type="KinematicBody2D" groups=[
"main_tower",
]]
collision_layer = 16
collision_mask = 46
script = ExtResource( 3 )
state = "terbakar"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -196597, 1, 0, -196595, 1, 1, -65525, 0, 0, -65523, 0, 1, 65547, 0, 65536, 65549, 0, 65537 )

[node name="lab" type="Sprite" parent="."]
position = Vector2( 0.68811, -70.7753 )
texture = ExtResource( 1 )
hframes = 2

[node name="fire" type="Node2D" parent="."]

[node name="end" type="Node2D" parent="fire"]
visible = false

[node name="burning_end_1" type="Sprite" parent="fire/end"]
position = Vector2( -86.4041, -2.41944 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_3" type="Sprite" parent="fire/end"]
position = Vector2( 77.2075, -2.22126 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_2" type="Sprite" parent="fire/end"]
position = Vector2( -62.1095, -128.877 )
scale = Vector2( 1.29951, 1.35126 )
texture = ExtResource( 8 )
hframes = 4

[node name="burning_end_4" type="Sprite" parent="fire/end"]
position = Vector2( 51.988, -105.211 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_5" type="Sprite" parent="fire/end"]
position = Vector2( 45.2198, -3.11215 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 9 )
hframes = 5

[node name="burning_end_6" type="Sprite" parent="fire/end"]
position = Vector2( -34.0197, -124.146 )
scale = Vector2( 1.29951, 1.35126 )
texture = ExtResource( 8 )
hframes = 4

[node name="loop" type="Node2D" parent="fire"]
visible = false

[node name="burning_loop_1" type="Sprite" parent="fire/loop"]
position = Vector2( -86.1735, -2.67916 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_3" type="Sprite" parent="fire/loop"]
position = Vector2( 77.438, -2.48099 )
scale = Vector2( 2.838, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_2" type="Sprite" parent="fire/loop"]
position = Vector2( -62.5993, -129.072 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 6 )
hframes = 6

[node name="burning_loop_4" type="Sprite" parent="fire/loop"]
position = Vector2( 52.2186, -105.47 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_5" type="Sprite" parent="fire/loop"]
position = Vector2( 45.4503, -3.37186 )
scale = Vector2( 2.44582, 1.79835 )
texture = ExtResource( 7 )
hframes = 8

[node name="burning_loop_6" type="Sprite" parent="fire/loop"]
position = Vector2( -34.5095, -124.341 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 6 )
hframes = 6

[node name="start" type="Node2D" parent="fire"]
visible = false

[node name="burning_start_1" type="Sprite" parent="fire/start"]
position = Vector2( -87.7892, -2.72982 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_3" type="Sprite" parent="fire/start"]
position = Vector2( 75.8223, -2.53165 )
scale = Vector2( 2.838, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_2" type="Sprite" parent="fire/start"]
position = Vector2( -62.3563, -128.582 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 10 )
hframes = 4
frame = 1

[node name="burning_start_4" type="Sprite" parent="fire/start"]
position = Vector2( 50.6029, -105.521 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_5" type="Sprite" parent="fire/start"]
position = Vector2( 43.8346, -3.42253 )
scale = Vector2( 2.446, 1.798 )
texture = ExtResource( 5 )
hframes = 4

[node name="burning_start_6" type="Sprite" parent="fire/start"]
position = Vector2( -34.2665, -123.851 )
scale = Vector2( 1.3, 1.351 )
texture = ExtResource( 10 )
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"main_tower",
]]
shape = SubResource( 2 )

[node name="H_area" type="Area2D" parent="."]
position = Vector2( 0, 14.6954 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="H_area"]
position = Vector2( 0, 4.20448 )
shape = SubResource( 3 )

[node name="V_area" type="Area2D" parent="."]
position = Vector2( 0, 12.314 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="V_area"]
position = Vector2( 0, 25.4712 )
shape = SubResource( 4 )

[node name="HP_Bar" parent="." instance=ExtResource( 4 )]
margin_left = -97.2331
margin_top = -48.0837
margin_right = 176.767
margin_bottom = -8.0837
rect_scale = Vector2( 0.705287, 0.521067 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/aman = SubResource( 5 )
anims/bakar = SubResource( 6 )
anims/siram = SubResource( 7 )
anims/terbakar = SubResource( 8 )

[connection signal="maintower_hit" from="." to="." method="_on_main_tower_hit"]
